feat(alerts): alert email validation for CCSM
related to OPT-7417