@@ -16,7 +16,6 @@ import org.springframework.stereotype.Component;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Conditional(CCSaaSCondition.class)
 @Component
@@ -28,8 +27,8 @@ public class CCSaaSAlertRecipientValidator implements AlertRecipientValidator {
   @Override
   public void validateAlertRecipientEmailAddresses(final List<String> emails) {
     final List<String> lowerCasedUserEmails = identityService.getUsersByEmail(emails)
-      .stream().map(user -> user.getEmail().toLowerCase()).collect(Collectors.toList());
-    final List<String> lowerCasedInputEmails = emails.stream().map(String::toLowerCase).collect(Collectors.toList());
+      .stream().map(user -> user.getEmail().toLowerCase()).toList();
+    final List<String> lowerCasedInputEmails = emails.stream().map(String::toLowerCase).toList();
     final Collection<String> unknownEmails = CollectionUtils.subtract(lowerCasedInputEmails, lowerCasedUserEmails);
     if (!unknownEmails.isEmpty()) {
       throw new OptimizeAlertEmailValidationException(new HashSet<>(unknownEmails));
